# linguistic-engineering-pjatk

./: .gitignore  README.md  pyproject.toml  requirements.txt
INL_C01/: INL_lab1_tokenizacja_słowa.ipynb
INL_C02/: INL_lab2_tokenizacja_zdania 2.ipynb  requirements.txt
INL_C03/: 2.txt
class-01/: INL_lab1_tokenizacja_słowa.ipynb
class-02/: INL_lab2_tokenizacja_zdania 2.ipynb
class-03/: INL_lab3_tagowanie_spaCy.ipynb
class-05/: INL_lab5_parsowanie.ipynb
class-07/: INL_lab8_prawdopodobienstwo i ngramy.ipynb
class-08/: INL_Lab9_word_embedding.ipynb
class-09/: INL-lab10_pretrained_word_embedding.ipynb
class-10/: Lab_11_WordNet.ipynb  lab11_tekst1.txt  lab11_tekst2.txt  lab11_tekst3.txt
class-11/: INL_lab12_NER.ipynb
